src/components/app/main_content/form/checkboxlist/CheckBoxList.css
#checkbox-container {
    box-sizing: border-box;
}

.checkbox-button {
    border: 1px solid #CCC;
    border-radius: 3px;
    appearance: none;
    background-color: #fff;
    background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
    background-repeat: no-repeat;
    background-position-x: 100%;
    background-position-y: 5px;
    padding-top: 0.4em;
    padding-right: 1.5em;
    padding-bottom: 0.4em;
    padding-left: 0.5em;
    width: 215px;
}

.checkboxlist {
    position: absolute;
    z-index: 1;
    border: 1px solid #CCC;
    background-color: white;
    padding-top: 0.4em;
    padding-right: 1.5em;
    padding-bottom: 0.4em;
    padding-left: 0.5em;
    width: 215px;
}

.check-item {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    font-size: small;
}

.check-item:hover {
    display: inline-block;
    background-color: var(--primary-color);
    width: 100%;
    color: white;
}

@media (max-width: 1024px) {
    
    .checkbox-button {
        width: fit-content;
        margin-top: 0.5em;
        text-align: center;
        
    }
    .checkboxlist {
        /* padding-right: 1.1em;
        width: 90%; */
        width: 219px;
        
    }
    .check-item:hover{
        background-color: initial;
        color: black;
    }
}

@media screen and (max-width: 661px){
    .checkbox-button {
        width: 300px;
        margin-top: 0.5em;
    }
    .checkboxlist {
        /* padding-right: 1.1em;
        width: 90%; */
        width: 300px;
    }
}

